--- a/rpc-example/pom.xml
+++ b/rpc-example/pom.xml
@@ -5,15 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.jeff4w.learn</groupId>
-    <artifactId>reentrance-lock-example</artifactId>
+    <artifactId>rpc-example</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-        </dependency>
-    </dependencies>
 
 </project>
