--- a/rpc-example/pom.xml
+++ b/rpc-example/pom.xml
@@ -91,6 +91,12 @@
             <version>1.1.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
